--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "article-parser": "^7.2.4",
     "feed-reader": "^6.1.2",
     "html-entities": "^2.3.3",
+    "iconv-lite": "^0.6.3",
     "jsdom": "^20.0.2",
     "node-fetch": "^3.2.10"
   },
