--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "feed-reader": "^6.1.2",
     "html-entities": "^2.3.3",
     "iconv-lite": "^0.6.3",
+    "ip": "^1.1.8",
     "jimp": "^0.16.2",
     "jsdom": "^20.0.2",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "public-ip": "^6.0.1"
   },
   "type": "module"
 }
