--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Konstantin Meyer",
   "license": "ISC",
   "dependencies": {
+    "@extractus/feed-extractor": "^7.0.6",
     "@mozilla/readability": "^0.4.4",
     "article-parser": "^7.2.5",
-    "feed-reader": "^6.1.3",
     "html-entities": "^2.4.0",
     "iconv-lite": "^0.6.3",
     "ip": "^1.1.8",
