--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jimp": "^0.22.10",
     "jsdom": "^22.1.0",
     "node-fetch": "^3.3.2",
+    "normalize-html-whitespace": "^1.0.0",
     "public-ip": "^6.0.1"
   },
   "type": "module"
