--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsdom": "^22.1.0",
     "node-fetch": "^3.3.2",
     "normalize-html-whitespace": "^1.0.0",
-    "public-ip": "^6.0.1"
+    "public-ip": "^6.0.1",
+    "svg2img": "^1.0.0-beta.2"
   },
   "type": "module"
 }
