--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@extractus/article-extractor": "^8.0.3",
     "@extractus/feed-extractor": "^7.0.6",
     "@mozilla/readability": "^0.4.4",
+    "chardet": "^2.0.0",
     "html-entities": "^2.4.0",
     "iconv-lite": "^0.6.3",
     "ip": "^1.1.8",
