--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@extractus/feed-extractor": "^7.0.6",
     "@mozilla/readability": "^0.4.4",
     "chardet": "^2.0.0",
+    "dom-to-semantic-markdown": "^1.0.11",
     "html-entities": "^2.4.0",
     "iconv-lite": "^0.6.3",
     "jsdom": "^22.1.0",
@@ -19,8 +20,7 @@
     "node-html-markdown": "^1.3.0",
     "normalize-html-whitespace": "^1.0.0",
     "sharp": "^0.32.6",
-    "showdown": "^2.1.0",
-    "turndown": "^7.2.0"
+    "showdown": "^2.1.0"
   },
   "type": "module"
 }
