--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "html-entities": "^2.4.0",
     "iconv-lite": "^0.6.3",
     "jsdom": "^22.1.0",
+    "markdown-it": "^14.1.0",
     "node-fetch": "^3.3.2",
     "node-html-markdown": "^1.3.0",
     "normalize-html-whitespace": "^1.0.0",
-    "sharp": "^0.32.6",
-    "showdown": "^2.1.0"
+    "sharp": "^0.32.6"
   },
   "type": "module"
 }
