--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@mozilla/readability": "^0.4.4",
     "chardet": "^2.0.0",
     "dom-to-semantic-markdown": "^1.0.11",
+    "dompurify": "^3.1.6",
     "html-entities": "^2.4.0",
+    "html-minifier-terser": "^7.2.0",
     "iconv-lite": "^0.6.3",
+    "isomorphic-dompurify": "^2.14.0",
     "jsdom": "^22.1.0",
     "markdown-it": "^14.1.0",
     "node-fetch": "^3.3.2",
